# db_practice

./: .gitignore  README.md  database.py  main.py  pyproject.toml  requirements.txt
apps/: models.py  schemas.py
apps/repository/: search.py
apps/routers/: search.py
