[tool.poetry]
name = "db_practice"
version = "0.1.0"
description = ""
authors = ["none"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
